# esmf

./: #gisDev.org#  .#gisDev.org  .gitattributes  .gitignore  .travis.yml  .zenodo.json  CMakeLists.txt  CONTRIBUTING.md  ESMC_LogErr.C  ESMF_LogErr_C.F90  LICENSE  MANIFEST.in  README  README.md  gisDev.org  makefile  settings.sh  setup.py
src/Infrastructure/Mesh/src/Moab/io/mhdf/: .gitignore  CMakeLists.txt
src/addon/ESMPy/: .gitignore  LICENSE  Makefile  README  README.md  old.setup.cfg  pyproject.toml  setup.cfg  setup.py  test_all.bash
src/addon/ESMPy/doc/: CoordSys.rst  DecompFlag.rst  ExtrapMethod.rst  FileFormat.rst  FileMode.rst  GridItem.rst  LineType.rst  LogKind.rst  Makefile  MeshElemType.rst  MeshLoc.rst  NormType.rst  PoleKind.rst  PoleMethod.rst  Region.rst  RegridMethod.rst  StaggerLoc.rst  TypeKind.rst  UnmappedAction.rst  api.rst  appendix.rst  conf.py  examples.rst  field.rst  grid.rst  index.rst  install.rst  intro.rst  locstream.rst  manager.rst  mesh.rst  regrid.rst  regridfromfile.rst
src/addon/ESMPy/examples/: create_read_from_file.py  cubed_sphere_to_mesh_regrid.py  exampletest.py  exampletestdryrun.py  field_read.py  grid_create_from_file.py  grid_create_peridim_mask.py  grid_locstream_regrid.py  grid_mesh_regrid.py  hello_world.py  locstream_grid_regrid.py  mesh_create_from_file.py  mesh_locstream_regrid.py  mpi_spawn_regrid.py  read_write_weight_file.py  regrid_from_file.py  run_examples.py  run_examples_dryrun.py  test_examples.py  test_examples_download.py  test_examples_dryrun.py  tripole_regrid.py  ugrid_latlon_regrid.py  ungridded_dimension_regrid.py
src/addon/ESMPy/examples/data/: mpas_uniform_10242_dual_counterclockwise.nc
src/addon/ESMPy/examples/notebooks/: AdvancedRegridding.ipynb  BasicRegridding.ipynb  GridCellArea.ipynb  GridMeshLocStreamField.ipynb  Periodic.ipynb  regrid_basic.ipynb  ugrid_latlon_regrid.ipynb  ungridded_dimension_regrid.ipynb
src/addon/ESMPy/src/ESMF/: __init__.py
src/addon/ESMPy/src/ESMF/api/: array.py  constants.py  esmpymanager.py  field.py  grid.py  locstream.py  mesh.py  newfield.py  regrid.py
src/addon/ESMPy/src/ESMF/fragments/: extras.py  remap.py
src/addon/ESMPy/src/ESMF/interface/: cbindings.py  loadESMF.py
src/addon/ESMPy/src/ESMF/test/: array_test.py  base.py  base_test.py  run_alltest.py  run_unit_test.py  test_cbindings.py  unit_test.py
src/addon/ESMPy/src/ESMF/test/data/: ne4np4-pentagons.nc
src/addon/ESMPy/src/ESMF/test/regrid_from_file/: read_test_cases_from_control_file.py  regrid_check.py  regrid_check_driver.py  regrid_from_file_consts.py  regrid_test_data.txt  rfftest.py  rfftestdryrun.py  run_regrid_from_file.py  run_regrid_from_file_dryrun.py
src/addon/ESMPy/src/ESMF/test/regrid_test/: field_regridding_test.py  grid_grid_regrid_csrv_mask_3D_test.py  grid_grid_regrid_csrv_mask_test.py  grid_mesh_regrid_csrv_mask_test.py  grid_mesh_regrid_csrv_test.py  grid_mesh_regrid_mask_test.py  grid_mesh_regrid_test.py  grid_regridding_utilities.py  mesh_mesh_regrid_test.py  mesh_regridding_utilities.py  run_regrid.py  run_regrid_parallel.py
src/addon/ESMPy/src/ESMF/test/test_api/: field_utilities.py  grid_utilities.py  locstream_utilities.py  mesh_utilities.py  test_array.py  test_field.py  test_grid.py  (+4 more)
src/addon/ESMPy/src/ESMF/util/: cache_data.py  decorators.py  esmpyarray.py  exceptions.py  field_utilities.py  grid_utilities.py  helpers.py  itester.py  locstream_utilities.py  mesh_utilities.py  slicing.py
src/addon/ESMPy/src/esmpy/: __init__.py
src/addon/ESMPy/src/esmpy/api/: constants.py  esmpymanager.py  field.py  locstream.py  regrid.py
src/addon/ESMPy/src/esmpy/interface/: cbindings.py  loadESMF.py
src/addon/ESMPy/src/esmpy/test/: base.py  base_test.py  test_all.bash  test_cbindings.py
src/addon/ESMPy/src/esmpy/util/: cache_data.py  decorators.py  exceptions.py  field_utilities.py
src/addon/ESMX/: CMakeLists.txt  ESMX_App.F90  ESMX_Driver.F90  README.md  esmx.F90  esmxGen.py
src/addon/ESMX/Comps/: ESMX_Data.F90
src/addon/ESMX/Comps/ESMX_Data/: CMakeLists.txt  ESMX_Data.F90  README.md
src/addon/ESMX/Driver/: CMakeLists.txt  ESMX_Driver.F90  NUOPC_XCOMP.F90  esmxGen.py  esmx_app_config.py  esmx_comp_config.py  esmx_test_config.py  esmx_tools.py
src/addon/ESMX/Driver/cmake/: FindESMF.cmake
src/addon/ESMX/Tests/esmx-data/: esmxRun.config  esmxRun.yaml
src/addon/ESMX/cmake/: FindESMF.cmake
src/addon/esmpy/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/addon/esmpy/build_utils/: README.md  version.py
src/addon/esmpy/doc/: CoordSys.rst  FileFormat.rst  FileMode.rst  GridItem.rst  LineType.rst  LogKind.rst  MeshElemType.rst  MeshLoc.rst  PoleKind.rst  PoleMethod.rst  Region.rst  RegridMethod.rst  TypeKind.rst  api.rst  appendix.rst  conf.py  examples.rst  field.rst  grid.rst  index.rst  install.rst  intro.rst  locstream.rst  manager.rst  regrid.rst  regridfromfile.rst
src/addon/esmpy/examples/: cubed_sphere_to_mesh_regrid.py  field_read.py  grid_create_peridim_mask.py  grid_locstream_regrid.py  hello_world.py  locstream_grid_regrid.py  mpi_spawn_regrid.py  read_write_weight_file.py  regrid_from_file.py  test_examples.py  test_examples_download.py  tripole_regrid.py  ugrid_latlon_regrid.py  ungridded_dimension_regrid.py
src/addon/esmpy/examples/notebooks/: AdvancedRegridding.ipynb  BasicRegridding.ipynb  GridCellArea.ipynb  GridMeshLocStreamField.ipynb  Periodic.ipynb  ugrid_latlon_regrid.ipynb  ungridded_dimension_regrid.ipynb
src/addon/esmpy/src/esmpy/: __init__.py
src/addon/esmpy/src/esmpy/api/: constants.py  dynamicmask.py  esmpymanager.py  field.py  grid.py  locstream.py  mesh.py  regrid.py
src/addon/esmpy/src/esmpy/fragments/: dump_esmf_internal_info.py  extras.py  remap.py
src/addon/esmpy/src/esmpy/interface/: cbindings.py  loadESMF.py  loadESMF_helpers.py
src/addon/esmpy/src/esmpy/test/: base.py  test_all.bash
src/addon/esmpy/src/esmpy/util/: cache_data.py  decorators.py  esmpyarray.py  exceptions.py  field_utilities.py  grid_utilities.py  helpers.py  itester.py  locstream_utilities.py  mesh_utilities.py  slicing.py
(+8250 files in other folders)
