[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning", ]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.pytest.ini_options]
markers = [
    "dryrun: marks a function that will only download test data files (deselect with '-m \"not parallel\"')",
    "parallel: marks a test which requires mpi (deselect with '-m \"not parallel\"')",
    "serial: marks a test which should be run on one core (deselect with '-m \"not serial\"')"
]
