[metadata]
name = ESMPy
version = 8.4.0beta
description = ESMF Python interface
long_description = file: README.md, LICENSE
license = University of Illinois-NCSA
author = University Corporation for Atmospheric Research,
         Massachusetts Institute of Technology,
         Geophysical Fluid Dynamics Laboratory,
         University of Michigan,
         National Centers for Environmental Prediction,
         Los Alamos National Laboratory,
         Argonne National Laboratory,
         NASA Goddard Space Flight Center
author_email = "esmf_support@ucar.edu",
url="http://earthsystemmodeling.org/esmpy/",


[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    numpy
    pytest

[options.packages.find]
where=src
exclude =
    doc*
    examples*
    test*
