[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "esmpy"
description = "ESMF Python interface"
# readme = "README.md"
maintainers = [{author = "ESMF Core Team", email = "esmf_support@ucar.edu"}]
requires-python = ">=3.7"
license = {text = "University of Illinois-NCSA"}
dependencies = [
    "numpy",
    "pytest-json-report",
    'importlib-metadata; python_version < "3.8"',
    # setuptools-git-versioning shouldn't be needed here, but is
    # included as a workaround for problems with the build-time
    # installation of this package with python 3.10 (given by the
    # build-system section above). By including it here, we at least
    # ensure that this package will be available for a second or
    # subsequent pip install of esmpy.
    'setuptools-git-versioning; python_version >= "3.10"',
]
dynamic = ["version"]

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"
starting_version = "8.5.0beta" # this is a backup for pip <= 22.0 where git-versioning doesn't work

[tool.dynamic]
version = "placeholder" # this is a placeholder for the version pulled with git-versioning

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["doc*"]

[tool.pytest.ini_options]
testpaths = [
    "src/esmpy/test/test_api",
    "examples/test_examples.py", 
    "src/esmpy/test/regrid_from_file/test_regrid_from_file.py", 
]
